DB Migrate and Room

--- a/app/src/main/res/layout/item_book_list.xml
+++ b/app/src/main/res/layout/item_book_list.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="viewModel"
-            type="com.mayburger.dzikirqu.ui.adapters.viewmodels.ItemBookListViewModel" />
+            type="com.mayburger.dzikirqu.ui.adapters.viewmodels.ItemPrayerViewModel" />
 
     </data>
 
