--- a/app/src/main/res/layout/fragment_prayer.xml
+++ b/app/src/main/res/layout/fragment_prayer.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.mayburger.dzikirqu.ui.main.book.BookListViewModel" />
+            type="com.mayburger.dzikirqu.ui.main.book.PrayerViewModel" />
 
         <import type="com.mayburger.dzikirqu.constants.RecyclerConstants" />
 
@@ -33,8 +33,9 @@
             android:background="@drawable/circle_grey_dark" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvBookList"
+            android:id="@+id/rvPrayer"
             android:layout_marginTop="16dp"
+            prayerAdapter="@{viewModel.prayer}"
             recyclerLayoutManager="@{RecyclerConstants.VERTICAL_LAYOUT_MANAGER}"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
