--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -27,24 +27,23 @@
         tools:visibility="visible">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="160dp"
-            android:layout_height="200dp"
-            android:foreground="?selectableItemBackground"
+            android:layout_width="120dp"
+            android:layout_height="160dp"
             android:background="@drawable/ripple_white_8dp"
             android:elevation="2dp">
 
-
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="140dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="8dp"
                 android:src="@drawable/ic_bookhalf"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/next"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:layout_margin="8dp"
                 android:background="@drawable/shp_primary_8dp"
                 android:padding="6dp"
@@ -72,10 +71,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
-                android:text="@{viewModel.data.desc}"
-                android:maxLines="6"
-                android:textColor="@color/colorTextGrey"
                 android:ellipsize="end"
+                android:maxLines="4"
+                android:text="@{viewModel.data.desc}"
+                android:textColor="@color/colorTextGrey"
                 android:textSize="12sp"
                 app:layout_constraintLeft_toLeftOf="@id/title"
                 app:layout_constraintRight_toRightOf="parent"
