--- a/app/src/main/res/layout/item_prayer.xml
+++ b/app/src/main/res/layout/item_prayer.xml
@@ -23,21 +23,17 @@
         android:clipToPadding="false"
         android:focusable="true"
         android:orientation="vertical"
-        android:padding="2dp"
         tools:visibility="visible">
 
         <com.mayburger.dzikirqu.util.textfont.TextFont
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:padding="16dp"
             android:alpha="0.8"
-            android:text="@{viewModel.data.title}"
+            android:text="@{viewModel.title}"
             android:textColor="@color/colorBlack"
-            android:textSize="16sp"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:textSize="18sp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Evening Dzikir" />
@@ -49,8 +45,8 @@
             android:ellipsize="end"
             android:maxLines="6"
             android:text="@{viewModel.size}"
+            android:visibility="gone"
             android:textColor="@color/colorTextGrey"
-            android:textSize="12sp"
             app:layout_constraintLeft_toLeftOf="@id/title"
             app:layout_constraintRight_toRightOf="@id/title"
             app:layout_constraintTop_toBottomOf="@id/title"
@@ -59,7 +55,6 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="10dp"
             android:background="@color/colorGreyDecor"
             app:layout_constraintTop_toBottomOf="@id/description" />
 
