--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -19,7 +19,7 @@
         android:id="@+id/root"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="4dp"
         android:clickable="true"
         android:clipToPadding="false"
         android:focusable="true"
@@ -27,7 +27,7 @@
         tools:visibility="visible">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="120dp"
+            android:layout_width="match_parent"
             android:layout_height="160dp"
             android:background="@drawable/ripple_white_8dp"
             android:elevation="2dp">
