--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
 
     <color name="colorPrayer">#7F07F0</color>
 
+    <color name="colorPrimaryBackground">#0D3494A1</color>
+
     <color name="yellow_10">#FFF0D1</color>
     <color name="yellow_40">#FCC047</color>
     <color name="yellow_50">#FBAF18</color>
