--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -50,7 +50,7 @@
                 android:textSize="16sp"
                 app:layout_constraintLeft_toLeftOf="@id/salam"
                 app:layout_constraintTop_toBottomOf="@id/salam"
-                app:text="@{LocaleConstants.HAVE_YOU_READ_THE_QURAN_TODAY_Q}"
+                app:textLocale="@{LocaleConstants.HAVE_YOU_READ_THE_QURAN_TODAY_Q}"
                 tools:text="Have you read the Qur'an today?" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
