--- a/app/src/main/res/layout/item_highlight.xml
+++ b/app/src/main/res/layout/item_highlight.xml
@@ -15,62 +15,83 @@
 
     </data>
 
-    <LinearLayout
-        android:id="@+id/root"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:background="@drawable/shp_white_8dp"
-        android:elevation="1dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        tools:visibility="visible">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="8dp"
-            android:elevation="2dp"
-            android:background="@drawable/shp_primary_8dp"
-            android:padding="8dp"
-            android:src="@drawable/ic_book_white" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp">
+            android:layout_marginEnd="4dp"
+            app:cardCornerRadius="8dp"
+            app:cardUseCompatPadding="true">
 
-            <com.mayburger.dzikirqu.util.textfont.TextFont
-                android:id="@+id/title"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                app:text="@{viewModel.title}"
-                android:textColor="@color/colorBlack"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:typeface="bold"
-                tools:text="Read Evening Dzikir" />
+                android:layout_marginEnd="4dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                tools:visibility="visible">
 
-            <com.mayburger.dzikirqu.util.textfont.TextFont
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:singleLine="true"
-                app:text="@{viewModel.bookTitle}"
-                android:textColor="@color/colorTextGrey"
-                android:textSize="12sp"
-                app:layout_constraintLeft_toLeftOf="@id/title"
-                app:layout_constraintTop_toBottomOf="@id/title"
-                app:typeface="medium"
-                tools:text="Book of Dzikir" />
+                <ImageView
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginStart="8dp"
+                    android:background="@drawable/shp_primary_8dp"
+                    android:elevation="2dp"
+                    android:padding="8dp"
+                    app:imageResource="@{viewModel.imageResource}"
+                    tools:src="@drawable/ic_book_white" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp">
+
+                    <com.mayburger.dzikirqu.util.textfont.TextFont
+                        android:id="@+id/title"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:textColor="@color/colorBlack"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:textLocale="@{viewModel.data.title}"
+                        app:typeface="bold"
+                        tools:text="Read Evening Dzikir" />
+
+                    <com.mayburger.dzikirqu.util.textfont.TextFont
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:textColor="@color/colorTextGrey"
+                        android:textSize="12sp"
+                        app:layout_constraintLeft_toLeftOf="@id/title"
+                        app:layout_constraintTop_toBottomOf="@id/title"
+                        app:textLocale="@{viewModel.data.subtitle}"
+                        app:typeface="medium"
+                        tools:text="Book of Dzikir" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:id="@+id/delete"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/circle_white"
+            android:elevation="4dp"
+            android:src="@drawable/ic_close_grey"
+            android:visibility="@{viewModel.showClose ? View.VISIBLE : View.GONE}" />
+    </RelativeLayout>
 </layout>
