--- a/app/src/main/res/layout/item_surah.xml
+++ b/app/src/main/res/layout/item_surah.xml
@@ -17,14 +17,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="4dp">
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/shp_white_8dp"
-            android:elevation="2dp"
             android:padding="14dp"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -86,6 +84,13 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:alpha="0.3"
+            android:background="@color/colorGreyDecorDark"
+            app:layout_constraintTop_toBottomOf="@id/parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
