--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -39,6 +39,7 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/shp_grey_8dp"
                 android:gravity="center_vertical"
+                android:onClick="@{()->viewModel.onClickSearch()}"
                 android:orientation="horizontal"
                 android:padding="8dp">
 
@@ -54,6 +55,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
+                    android:singleLine="true"
                     android:background="@null"
                     android:textSize="12sp">
 
