--- a/app/src/main/res/layout/fragment_search_surah.xml
+++ b/app/src/main/res/layout/fragment_search_surah.xml
@@ -24,9 +24,21 @@
         android:layout_height="match_parent"
         android:animateLayoutChanges="true">
 
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="32dp"
+            android:visibility="@{viewModel.isLoaded() ? View.GONE : View.VISIBLE}" />
+
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvSurah"
+            surahAdapter="@{viewModel.surah}"
+            recyclerLayoutManager="@{RecyclerConstants.VERTICAL_LAYOUT_MANAGER}"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:visibility="@{viewModel.isLoaded() ? View.VISIBLE : View.GONE}" />
 
     </RelativeLayout>
 
