--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,78 +14,23 @@
         <import type="com.mayburger.dzikirqu.util.praytimes.PrayerTimeHelper" />
 
         <import type="com.mayburger.dzikirqu.constants.LocaleConstants" />
-
-        <import type="android.view.View" />
     </data>
 
-
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:animateLayoutChanges="true">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent">
+        <fragment
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:defaultNavHost="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:animateLayoutChanges="true"
-                android:orientation="vertical"
-                android:background="@color/colorPrimary"
-                android:paddingBottom="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:background="@color/colorPrimary">
-
-
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/tabLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true" />
-
-            </RelativeLayout>
-
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/toolbar" />
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="@{viewModel.showSearch == false}"
-            android:layout_margin="@{viewModel.showSearch ? 0 : 16}"
-            android:animateLayoutChanges="true"
-            android:background="@{viewModel.showSearch ? @drawable/shp_white : @drawable/circle_primary}"
-            android:elevation="4dp"
-            android:onClick="@{()->viewModel.onClickSearch()}"
-            tools:background="@color/colorWhite"
-            tools:layout_alignParentBottom="true">
-
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/main_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="@{viewModel.showSearch ? View.VISIBLE : View.GONE}" />
-
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:padding="18dp"
-                android:src="@drawable/ic_search_white"
-                android:visibility="@{viewModel.showSearch ? View.GONE : View.VISIBLE}"
-                tools:visibility="gone" />
-        </RelativeLayout>
-
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
