--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -40,23 +40,23 @@
                 android:background="@drawable/shp_grey_8dp"
                 android:gravity="center_vertical"
                 android:onClick="@{()->viewModel.onClickSearch()}"
-                android:orientation="horizontal"
-                android:padding="8dp">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
+                    android:layout_margin="8dp"
                     android:padding="4dp"
                     android:src="@drawable/ic_search_grey" />
 
                 <com.mayburger.dzikirqu.util.textfont.EditTextFont
                     android:id="@+id/search"
                     hintLocale="@{LocaleConstants.SEARCH_DZIKIRQU}"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:singleLine="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
                     android:background="@null"
+                    android:imeOptions="actionDone"
+                    android:singleLine="true"
                     android:textSize="12sp">
 
                     <requestFocus />
