--- a/app/src/main/res/layout/item_search_ayah.xml
+++ b/app/src/main/res/layout/item_search_ayah.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="viewModel"
-            type="com.mayburger.dzikirqu.ui.adapters.viewmodels.ItemQuranViewModel" />
+            type="com.mayburger.dzikirqu.ui.adapters.viewmodels.ItemSearchAyahViewModel" />
 
     </data>
 
@@ -37,37 +37,21 @@
                 android:textColor="@color/colorWhite"
                 android:textSize="14sp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="@id/arabic"
+                app:layout_constraintTop_toTopOf="@id/translation"
                 app:typeface="bold"
                 tools:text="300" />
-
-            <com.mayburger.dzikirqu.util.textfont.TextFont
-                android:id="@+id/arabic"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="@{viewModel.data.arabic}"
-                android:textColor="@color/colorBlack"
-                android:textSize="24sp"
-                app:layout_constraintBottom_toTopOf="@id/translation"
-                app:layout_constraintLeft_toRightOf="@id/index"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:typeface="uthman"
-                tools:text="ذٰلِكَ الْكِتٰبُ لَا رَ يْبَ ۛ فِيهِ ۛ هُدًى لِّلْمُتَّقِينَ" />
 
             <com.mayburger.dzikirqu.util.textfont.TextFont
                 android:id="@+id/translation"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="@{viewModel.data.translation}"
+                android:layout_marginStart="16dp"
+                android:text="@{viewModel.translation}"
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp"
                 app:layout_constraintLeft_toRightOf="@id/index"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/arabic"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="Kitab (Al-Qur'an) ini tidak ada keraguan padanya, petunjuk bagi mereka yang bertakwa" />
 
 
