--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,7 +27,7 @@
     <color name="green_80">#0F752E</color>
 
     <color name="colorWhite">#fff</color>
-    <color name="colorTextGrey">#ADADAE</color>
+    <color name="colorTextGrey">#727F94</color>
     <color name="colorGreyDecor">#E3ECF1</color>
     <color name="colorGreyBackground">#F9FAFC</color>
     <color name="colorGreyDecorDark">#B7BFC5</color>
